objects/Customer_Provided_Solution__c.object
<CustomObject>
    <fields>
        <fullName>Interoperability_Resource_Guide__c</fullName>
        <label>Interoperability Resource Guide</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LegacyCPSId__c</fullName>
        <externalId>true</externalId>
        <label>Legacy CPS Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Please enter any descriptive information about the solution being used for the customer.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Solution_Catagory__c</fullName>
        <label>Solution Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Server Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Voice / Data Network Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Telecom Provider</fullName>
                </value>
                <value>
                    <fullName>Network WAN Provider</fullName>
                </value>
                <value>
                    <fullName>Backend Systems</fullName>
                </value>
                <value>
                    <fullName>Third Party PBX Switch</fullName>
                </value>
                <value>
                    <fullName>Third Party Business Applications</fullName>
                </value>
                <value>
                    <fullName>Contact Center Solution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Design__c</fullName>
        <label>Solution Design</label>
        <referenceTo>Solution_Design__c</referenceTo>
        <relationshipLabel>Customer Provided Solutions</relationshipLabel>
        <relationshipName>Customer_Provided_Solutions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Solution_Function__c</fullName>
        <label>Solution Function</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Solution_Catagory__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ACD</fullName>
                </value>
                <value>
                    <fullName>Anti-Virus</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>BPM</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>ECM</fullName>
                </value>
                <value>
                    <fullName>ERP </fullName>
                </value>
                <value>
                    <fullName>Financial Core Processing</fullName>
                </value>
                <value>
                    <fullName>IP PBX Switch</fullName>
                </value>
                <value>
                    <fullName>IVR</fullName>
                </value>
                <value>
                    <fullName>Mail Platform</fullName>
                </value>
                <value>
                    <fullName>MPLS</fullName>
                </value>
                <value>
                    <fullName>Network Load Balancer</fullName>
                </value>
                <value>
                    <fullName>Outbound Dialer</fullName>
                </value>
                <value>
                    <fullName>Policy Admin </fullName>
                </value>
                <value>
                    <fullName>Policy Output</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>PTP</fullName>
                </value>
                <value>
                    <fullName>Quality Monitoring/Recording </fullName>
                </value>
                <value>
                    <fullName>SBC / Firewall / Security</fullName>
                </value>
                <value>
                    <fullName>Server (Blade Infrastructure)</fullName>
                </value>
                <value>
                    <fullName>Server (Physical)</fullName>
                </value>
                <value>
                    <fullName>Server (Virtual Infrastructure)</fullName>
                </value>
                <value>
                    <fullName>SIP Trunking</fullName>
                </value>
                <value>
                    <fullName>System Backup</fullName>
                </value>
                <value>
                    <fullName>T1 / PRI Trunking</fullName>
                </value>
                <value>
                    <fullName>TDM PBX Switch</fullName>
                </value>
                <value>
                    <fullName>Time Entry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Name__c</fullName>
        <label>Solution / Provider Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Solution_Function__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Accenture/Duck Creek</fullName>
                </value>
                <value>
                    <fullName>Access </fullName>
                </value>
                <value>
                    <fullName>ACME Packets</fullName>
                </value>
                <value>
                    <fullName>ADTRAN</fullName>
                </value>
                <value>
                    <fullName>Agency Port</fullName>
                </value>
                <value>
                    <fullName>Appian</fullName>
                </value>
                <value>
                    <fullName>Applied Systems Epic</fullName>
                </value>
                <value>
                    <fullName>Applied Systems TAM</fullName>
                </value>
                <value>
                    <fullName>Aspect </fullName>
                </value>
                <value>
                    <fullName>Aspect eWFM </fullName>
                </value>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>AudioCodes</fullName>
                </value>
                <value>
                    <fullName>Avaya </fullName>
                </value>
                <value>
                    <fullName>Avaya/Lucent </fullName>
                </value>
                <value>
                    <fullName>Barracuda</fullName>
                </value>
                <value>
                    <fullName>Blue Pumpkin </fullName>
                </value>
                <value>
                    <fullName>CallCopy</fullName>
                </value>
                <value>
                    <fullName>Camilion</fullName>
                </value>
                <value>
                    <fullName>Century Link</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Cisco UCS</fullName>
                </value>
                <value>
                    <fullName>Cisco Unified Call Manager </fullName>
                </value>
                <value>
                    <fullName>Citrix ZEN APP</fullName>
                </value>
                <value>
                    <fullName>Clarify </fullName>
                </value>
                <value>
                    <fullName>CRM - Custom</fullName>
                </value>
                <value>
                    <fullName>CSC AdvancedClaims</fullName>
                </value>
                <value>
                    <fullName>CSC Exceed</fullName>
                </value>
                <value>
                    <fullName>CSC POINT</fullName>
                </value>
                <value>
                    <fullName>CSC RISKMASTER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Release__c</fullName>
        <label>Solution Release</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Customer Provided Solution</label>
    <nameField>
        <displayFormat>CPS-{0000000}</displayFormat>
        <label>Customer Solution ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Provided Solutions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>